# Plain-Old-Data-Mate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_and_run_sample.sh  build_with_coverage.sh  default.profraw
cmake/: Conan.cmake  Doxygen.cmake  Sanitizers.cmake
cpp/: CMakeLists.txt
cpp/include/: collect_statements.h  collect_structs.h  convert_command_line_arguments.h  expected.h  expected_invoke.h  expected_invoke_helper.h  extract_member_name.h  extract_struct_snippets.h  find_inner_scope.h  input_parameter.h  output_file_parameters.h  output_parameter.h  parse_cpp_file.h  partition_into_struct_strings.h  plain_old_data_object_data.h  read_file_content.h  struct_name_with_content.h  struct_snippets.h  trim.h  whitespaces.h
cpp/include/file_parsing/: parse_cpp_file.h  struct_snippets.h
cpp/include/file_parsing/details/: calculate_surrounding_namespaces.h  collect_namespaces.h  collect_statements.h  collect_structs.h  extract_member_name.h  extract_member_snippet.h  extract_struct_snippets.h  find_inner_scope.h  namespace_data.h  partition_into_struct_strings.h  read_file_content.h  struct_name_with_content.h  structs_raw_data.h  trim.h  whitespaces.h
cpp/include/source_code_generation/: body.h  function.h  line_fragment.h  line_statement.h  source_code.h  source_code_line.h  variable_declaration.h  write_equal_operator.h  write_source_files.h
cpp/include/source_code_generation/details/: body.h  function.h  generate_source_code.h  line_fragment.h  namespace.h  source_code_collection.h  source_code_line.h  split_into_namespace_groups.h  variable_declaration.h  write_comparison_operator.h  write_equal_operator.h  write_from_json.h  write_left_shift_operator.h  write_unequal_operator.h
cpp/src/: collect_statements.cpp  collect_structs.cpp  convert_command_line_arguments.cpp  extract_member_name.cpp  extract_struct_snippets.cpp  find_inner_scope.cpp  input_parameter.cpp  main.cpp  output_file_parameters.cpp  parse_cpp_file.cpp  partition_into_struct_strings.cpp  read_file_content.cpp
cpp/src/file_parsing/: parse_cpp_file.cpp
cpp/src/file_parsing/details/: calculate_surrounding_namespaces.cpp  collect_namespaces.cpp  collect_statements.cpp  collect_structs.cpp  extract_member_name.cpp  extract_member_snippet.cpp  extract_struct_snippets.cpp  find_inner_scope.cpp  partition_into_struct_strings.cpp  read_file_content.cpp
cpp/src/source_code_generation/: body.cpp  function.cpp  line_fragment.cpp  line_statement.cpp  source_code.cpp  source_code_line.cpp  variable_declaration.cpp  write_equal_operator.cpp  write_source_files.cpp
cpp/src/source_code_generation/details/: body.cpp  function.cpp  generate_source_code.cpp  line_fragment.cpp  line_statement.cpp  namespace.cpp  source_code.cpp  source_code_collection.cpp  source_code_line.cpp  split_into_namespace_groups.cpp  variable_declaration.cpp  write_comparison_operator.cpp  write_equal_operator.cpp  write_from_json.cpp  write_from_json.h  write_left_shift_operator.cpp  write_unequal_operator.cpp
cpp/test/: CMakeLists.txt  constexpr_test_expected_invoke.cpp  copy_move_tracer.h  test_collect_structs.cpp  test_convert_command_line_arguments.cpp  test_expected.cpp  test_expected_invoke.cpp  test_extract_struct_snippets.cpp  test_partition_into_struct_strings.cpp  test_write_equal_operator.cpp
sample/: CMakeLists.txt  alter.h  build.sh  cli.cpp  fill.h  readme.md  sample_structs.h  to_string.h
